2002-08-13  Braden McDaniel  <braden@endoframe.com>

        * lib/antlr/config.hpp, src/openvrml/OpenVRML/field.cpp: Fixes
          to build with Irix 6.5 CC.

2002-08-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Workarounds for a bug in
          gcc 3.1.

        * src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/browser.cpp: BadURI exception destructor
          must not throw.

        * m4/gl.m4: Link against libm when checking for libGLU.

2002-08-04  Braden McDaniel  <braden@endoframe.com>

        * Refactored VrmlScene into Browser and Scene; Node now contains
          a pointer to its associated Scene. Nodes are added to a Scene
          with Node::initialize.

2002-08-02  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue updating conformance test results.

2002-07-22  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue updating conformance test results.

2002-07-18  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Fix a number of problems in the JSAI code.

        * Add additional javadoc comments to Java classes.

        * Improve output format of SFImage::print.

        * Update conformance test results.

2002-07-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/VrmlScene.cpp:  Removed Doc2 parameter
          from parser methods.  This parameter is unused now that we
          no longer use VrmlNamespace.

2002-07-11  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed several places
          in recalcBSphere methods where child nodes weren't checked for
          being NULL.

2002-07-10  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp, src/lookat/lookat.cpp,
          src/openvrml/OpenVRML/Image.cpp,